--- a/.gitignore
+++ b/.gitignore
@@ -36,4 +36,9 @@ hs_err_pid*
 ### VisualStudioCode Patch ###
 # Ignore all local history of files
 .history
-target/classes/application.properties
+
+#Ignore everything under target folder
+*/target/**
+
+# Ignore vscode settings
+.settings
