add tasklet, web-properties & change project structuring

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
-spring.batch.job.enabled=false
-spring.main.web_environment=true
+spring.batch.job.enabled=true
+spring.main.web_environment=false
+thread.pool.size=3
