change web-application-type to REACTIVE

--- a/src/main/resources/application-web.properties
+++ b/src/main/resources/application-web.properties
@@ -1,3 +1,4 @@
 spring.batch.job.enabled=false
-spring.main.web_environment=true
+# spring.main.web-environment=true
+spring.main.web-application-type=REACTIVE
 thread.pool.size=3
