Include server.port

--- a/src/main/resources/application-web.properties
+++ b/src/main/resources/application-web.properties
@@ -1,6 +1,6 @@
 spring.batch.job.enabled=false
-spring.main.web-environment=true
-# spring.main.web-application-type=SERVLET
+# spring.main.web-environment=true
+spring.main.web-application-type=SERVLET
 thread.pool.size=3
-welcome.message: Mkyong
 spring.thymeleaf.cache=false
+server.port=8090
