--- a/src/main/resources/application-web.properties
+++ b/src/main/resources/application-web.properties
@@ -2,5 +2,5 @@ spring.batch.job.enabled=false
 # spring.main.web-environment=true
 spring.main.web-application-type=SERVLET
 thread.pool.size=3
-spring.thymeleaf.cache=false
+spring.thymeleaf.cache=true
 server.port=8090
