--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.batch.job.enabled=true
-spring.main.web-application-type=none
+spring.batch.job.enabled=false
+spring.main.web-application-type=servlet
 thread.pool.size=3
