--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,15 @@
 spring.batch.job.enabled=false
 spring.main.web-application-type=servlet
 thread.pool.size=3
+
+#Database configuration
+spring.batch.initialize-schema=never
+# spring.datasource.initialization-mode=always
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+# spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/springbatch?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=a
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
