--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,6 +9,16 @@
             "mainClass": "com.marxelo.MyApplication",
             "projectName": "batchScheduler",
             "args": ""
+        },
+        {
+            "type": "java",
+            "name": "Spring Boot-MyApplication<SpringBatchWebLauncher>",
+            "request": "launch",
+            "cwd": "${workspaceFolder}",
+            "console": "internalConsole",
+            "mainClass": "com.marxelo.MyApplication",
+            "projectName": "SpringBatchWebLauncher",
+            "args": ""
         }
     ]
 }
