upgrade do spring-boot 2.3.4

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.batch.job.enabled=false
 spring.main.web-application-type=servlet
-thread.pool.size=3
+#thread.pool.size=3
 
 #Database configuration
 spring.batch.initialize-schema=never
