--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 spring.batch.job.enabled=false
 spring.main.web-application-type=servlet
 thread.pool.size=3
-
 #Database configuration
 spring.batch.initialize-schema=never
 # spring.datasource.initialization-mode=always
@@ -14,3 +13,20 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 server.port=8090
+# remove actuator prefix from /health
+management.endpoints.web.base-path=/
+#exposes only /health and /metrics
+management.endpoints.web.exposure.include=health,prometheus
+management.health.ping.enabled=false
+#management.health.datasource.enabled=true
+#management.health.livenessstate.enabled=true
+#management.health.readinessstate.enabled=true
+management.endpoint.health.show-details=always
+management.endpoint.health.show-components=always
+# management.health.probes.enabled=true
+management.endpoint.health.probes.enabled=true
+
+
+management.endpoint.health.group.db.include=db
+management.endpoints.web.path-mapping.prometheus=metrics
+
