Teste com scheduler

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 server.port=8090
+batch.cron.schedule.person-job=0 29 17 * * *
+batch.cron.schedule.credit-job=0 30 17 * * *
