--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,27 @@
+# debug=true
+logging.level.org.slf4j=info
+logging.level.com.marxelo=info
+logging.level.org.springframework.web.servlet=off
 spring.batch.job.enabled=false
 spring.main.web-application-type=servlet
+spring.batch.jdbc.isolation-level-for-create=default
+spring.jpa.open-in-view=false
+logging.level.root=off
+
 thread.pool.size=3
+
+spring.jpa.database-platform=com.marxelo.configuration.SQLiteDialect
+
+spring.batch.jdbc.initialize-schema=never
+
+spring.jpa.generate-ddl=false
+spring.jpa.hibernate.ddl-auto=none
+ 
+ 
+spring.datasource.url = jdbc:sqlite:spring_batch.db
+spring.datasource.driver-class-name = org.sqlite.JDBC
+
+# spring.sql.init.mode=always
+ 
+spring.datasource.username = admin
+spring.datasource.password = admin
